--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>shine smile</title>
+        <title>Project 3</title>
 
         <!-- Favicon -->
         <link
@@ -97,6 +97,21 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        
+        <!-- Header -->
+        <header class="header">
+            <div class="container">
+                <div class="header-top">
+                    <div class="logo">
+                        <span class="logo__circle"></span>
+                        <span class="logo__text">
+                            <span class="logo__brand">shine</span>
+                            <span class="logo__brand logo__brand--small">smile</span>
+                        </span>
+                    </div>
+                    <div class="navbar"></div>
+                    <div class="action"></div>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
