--- a/index.html
+++ b/index.html
@@ -108,8 +108,26 @@
                             <span class="logo__brand logo__brand--small">smile</span>
                         </span>
                     </div>
-                    <div class="navbar"></div>
-                    <div class="action"></div>
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link navbar__link--active">Home</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">Services</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">About</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">Doctors</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="action">
+                        <a href="#!" class="action__login">Log In</a>
+                        <button href="#!" class="btn action__signup">Sign Up</button>
+                    </div>
                 </div>
             </div>
         </header>
