--- a/index.html
+++ b/index.html
@@ -105,13 +105,19 @@
                         <span class="logo__circle"></span>
                         <span class="logo__text">
                             <span class="logo__brand">shine</span>
-                            <span class="logo__brand logo__brand--small">smile</span>
+                            <span class="logo__brand logo__brand--small"
+                                >smile</span
+                            >
                         </span>
                     </div>
                     <nav class="navbar">
                         <ul class="navbar__list">
                             <li class="navbar__item">
-                                <a href="#!" class="navbar__link navbar__link--active">Home</a>
+                                <a
+                                    href="#!"
+                                    class="navbar__link navbar__link--active"
+                                    >Home</a
+                                >
                             </li>
                             <li class="navbar__item">
                                 <a href="#!" class="navbar__link">Services</a>
@@ -124,11 +130,49 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="action">
-                        <a href="#!" class="action__login">Log In</a>
-                        <button href="#!" class="btn action__signup">Sign Up</button>
+                    <div class="header-action">
+                        <a href="#!" class="header-action__login">Log In</a>
+                        <button href="#!" class="btn header-action__signup">
+                            Sign Up
+                        </button>
                     </div>
                 </div>
+
+                <section class="hero">
+                    <div class="hero__body">
+                        <!-- Hero Content -->
+                        <section class="hero__left">
+                            <h1 class="heading hero__heading">
+                                Exceptional dental care for all ages.
+                            </h1>
+                            <p class="desc hero__desc">
+                                Exceptional dental care for all ages. Your great
+                                smile begins with a great dentist.
+                            </p>
+                            <div class="hero__contact">
+                                <a href="#!" class="btn">Book Online</a>
+                                <div class="desc hero__contact--desc">
+                                    or call (123) 456-7890
+                                </div>
+                            </div>
+                        </section>
+                        <!-- Hero Media -->
+                        <div class="hero__right">
+                            <figure class="hero__images">
+                                <img
+                                    src="./assets/img/hero-img.jpg"
+                                    alt="dentist"
+                                    class="hero__right--big"
+                                />
+                                <img
+                                    src="./assets/img/hero-img.jpg"
+                                    alt="dentist"
+                                    class="hero__right--small"
+                                />
+                            </figure>
+                        </div>
+                    </div>
+                </section>
             </div>
         </header>
     </body>
