--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                         </section>
                         <!-- Hero Media -->
-                        <div class="hero__right">
+                        <section class="hero__right">
                             <figure class="hero__images">
                                 <img
                                     src="./assets/img/hero-img.jpg"
@@ -170,10 +170,133 @@
                                     class="hero__right--small"
                                 />
                             </figure>
-                        </div>
+                        </section>
                     </div>
                 </section>
             </div>
         </header>
+
+        <main style="height: 5000000px">
+            <!-- Service -->
+            <section class="service">
+                <div class="container">
+                    <h1 class="section-heading service__heading">
+                        Our services
+                    </h1>
+                    <p class="section-desc service__desc">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+
+                    <div class="service__info">
+                        <!-- IMG -->
+                        <figure class="service__info--image">
+                            <img
+                                src="./assets/img/barce.jpg"
+                                alt="service"
+                                class="service__img"
+                            />
+                        </figure>
+                        <!-- Items -->
+                        <div class="service__all-service">
+                            <section class="service-item">
+                                <div class="service__icon-wrap">
+                                    <!-- icon -->
+                                    <img
+                                        src="./assets/img/blue-teeth.svg"
+                                        alt="teeth"
+                                    />
+                                </div>
+                                <div class="service-item__info">
+                                    <h3 class="service-item__heading">
+                                        Oral Surgery
+                                    </h3>
+                                    <p class="service-item__desc">
+                                        Everything you expect and then some.
+                                        Cleanings, fillings, and x-rays.
+                                    </p>
+                                </div>
+                            </section>
+
+                            <section class="service-item">
+                                <div class="service__icon-wrap">
+                                    <!-- icon -->
+                                    <img
+                                        src="./assets/img/white-teeth.svg"
+                                        alt="teeth"
+                                    />
+                                </div>
+                                <div class="service-item__info">
+                                    <h3 class="service-item__heading">
+                                        Wisdom Teeth Removal
+                                    </h3>
+                                    <p class="service-item__desc">
+                                        Everything you expect and then some.
+                                        Cleanings, fillings, and x-rays.
+                                    </p>
+                                </div>
+                            </section>
+
+                            <section class="service-item">
+                                <div class="service__icon-wrap">
+                                    <!-- icon -->
+                                    <img
+                                        src="./assets/img/white-teeth.svg"
+                                        alt="teeth"
+                                    />
+                                </div>
+                                <div class="service-item__info">
+                                    <h3 class="service-item__heading">
+                                        Preventative Dentistry
+                                    </h3>
+                                    <p class="service-item__desc">
+                                        Everything you expect and then some.
+                                        Cleanings, fillings, and x-rays.
+                                    </p>
+                                </div>
+                            </section>
+
+                            <a href="#!" class="btn section-btn">
+                                All Services
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- How it works -->
+            <section class="works">
+                <div class="container">
+                    <h1 class="section-heading">How it works</h1>
+                    <p class="section-desc works-desc">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+
+                    <section class="works__info">
+                        <div class="works-item">
+                            <img src="./assets/img/search.svg" alt="search">
+                            <h3 class="works-item__heading">Search doctor</h3>
+                            <p class="works-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                            <a href="" class="works-item__learn">Learn More</a>
+                        </div>
+
+                        <div class="works-item">
+                            <img src="./assets/img/find.svg" alt="find">
+                            <h3 class="works-item__heading">Find best doctor</h3>
+                            <p class="works-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                            <a href="" class="works-item__learn">Learn More</a>
+                        </div>
+
+                        <div class="works-item">
+                            <img src="./assets/img/get.svg" alt="get">
+                            <h3 class="works-item__heading">Search doctor</h3>
+                            <p class="works-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                            <a href="#!" class="works-item__learn">Learn More</a>
+                        </div>
+                    </section>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
