--- a/index.html
+++ b/index.html
@@ -275,26 +275,183 @@
 
                     <section class="works__info">
                         <div class="works-item">
-                            <img src="./assets/img/search.svg" alt="search">
+                            <img src="./assets/img/search.svg" alt="search" />
                             <h3 class="works-item__heading">Search doctor</h3>
-                            <p class="works-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                            <p class="works-item__desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
                             <a href="" class="works-item__learn">Learn More</a>
                         </div>
 
                         <div class="works-item">
-                            <img src="./assets/img/find.svg" alt="find">
-                            <h3 class="works-item__heading">Find best doctor</h3>
-                            <p class="works-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
+                            <img src="./assets/img/find.svg" alt="find" />
+                            <h3 class="works-item__heading">
+                                Find best doctor
+                            </h3>
+                            <p class="works-item__desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
                             <a href="" class="works-item__learn">Learn More</a>
                         </div>
 
                         <div class="works-item">
-                            <img src="./assets/img/get.svg" alt="get">
+                            <img src="./assets/img/get.svg" alt="get" />
                             <h3 class="works-item__heading">Search doctor</h3>
-                            <p class="works-item__desc">Search a doctor by education, qualifications or experience-contact for inquiry.</p>
-                            <a href="#!" class="works-item__learn">Learn More</a>
+                            <p class="works-item__desc">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="#!" class="works-item__learn"
+                                >Learn More</a
+                            >
                         </div>
                     </section>
+                </div>
+            </section>
+
+            <!-- Featured -->
+            <section class="featured">
+                <div class="container">
+                    <div class="featured__item">
+                        <!-- IMG -->
+                        <figure class="featured__image">
+                            <img
+                                src="./assets/img/featured.jpg"
+                                alt="dentist"
+                                class="featured__image-big"
+                            />
+                            <img
+                                src="./assets/img/featured.jpg"
+                                alt="dentist"
+                                class="featured__image-small"
+                            />
+                        </figure>
+                        <!-- Info -->
+                        <section class="featured__info">
+                            <h1 class="section-heading featured__info-heading">
+                                Take back your smile with shine.
+                            </h1>
+                            <p class="section-desc featured__info-desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <a href="" class="btn">Learn More</a>
+                        </section>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Members -->
+            <section class="member">
+                <div class="container">
+                    <section class="member__head">
+                        <h1 class="section-heading member__heading">
+                            Our virtual dentist
+                        </h1>
+                        <a href="#!" class="btn member__btn"
+                            >Meet our dentist
+                        </a>
+                    </section>
+
+                    <div class="member__list">
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/mb1.png"
+                                    alt="member"
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member__item-name">Dr. Essence Page</h3>
+                            <p class="member__item-desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/mb1.png"
+                                    alt="member"
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member__item-name">Dr. Essence Page</h3>
+                            <p class="member__item-desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/mb1.png"
+                                    alt="member"
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member__item-name">Dr. Essence Page</h3>
+                            <p class="member__item-desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/mb1.png"
+                                    alt="member"
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member__item-name">Dr. Essence Page</h3>
+                            <p class="member__item-desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+                    </div>
+
+                    <div class="member__control">
+                        <!-- Previous -->
+                        <button class="member__control-btn">
+                            <svg
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+
+                        <!-- Last -->
+                        <button class="member__control-btn">
+                            <svg
+                                class="member__control-next"
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </section>
         </main>
