--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </nav>
                     <div class="header-action">
                         <a href="#!" class="header-action__login">Log In</a>
-                        <button href="#!" class="btn header-action__signup">
+                        <button href="#!" class="btn header-action__sign-up">
                             Sign Up
                         </button>
                     </div>
