--- a/index.html
+++ b/index.html
@@ -454,6 +454,46 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Install -->
+            <section class="install">
+                <div class="container">
+                    <div class="install__body">
+                        <figure class="install__image">
+                            <img
+                                src="./assets/img/install.jpg"
+                                alt="intro"
+                                class="install__image-img"
+                            />
+                        </figure>
+
+                        <div class="install__info">
+                            <h1 class="section-heading install__info-heading">
+                                Take back your smile with dentures
+                            </h1>
+                            <p class="section-desc install__info-desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <div class="install__row">
+                                <a href="#!" class="install__btn">
+                                    <img
+                                        src="./assets/img/google-play.svg"
+                                        alt="google-play"
+                                    />
+                                </a>
+                                <a href="#!" class="install__btn">
+                                    <img
+                                        src="./assets/img/app-store.svg"
+                                        alt="google-play"
+                                    />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
