--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
                         </article>
                     </div>
 
-                    <div class="member__control">
+                    <div class="control member__control">
                         <!-- Previous -->
-                        <button class="member__control-btn">
+                        <button class="control__btn">
                             <svg
                                 width="6"
                                 height="12"
@@ -434,9 +434,9 @@
                         </button>
 
                         <!-- Last -->
-                        <button class="member__control-btn">
+                        <button class="control__btn">
                             <svg
-                                class="member__control-next"
+                                class="control__next"
                                 width="6"
                                 height="12"
                                 viewBox="0 0 6 12"
@@ -492,6 +492,124 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <!-- News -->
+            <section class="news">
+                <div class="container">
+                    <section class="news__body">
+                        <div class="news__info">
+                            <h3>
+                                <a href="#!" class="news__heading"
+                                    >Read Latest News & Events.</a
+                                >
+                            </h3>
+                            <a href="#!" class="news__link">Read All Blog</a>
+                            <div class="control">
+                                <button class="control__btn">
+                                    <svg
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <button class="control__btn">
+                                    <svg
+                                        class="control__next"
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="news__medicine">
+                            <div class="news__medicine-info">
+                                <figure>
+                                    <a href="#!">
+                                        <img
+                                            src="./assets/img/barce.jpg"
+                                            alt="medicine"
+                                            class="medicine-info__image"
+                                        />
+                                    </a>
+                                </figure>
+                                <div class="medicine-info__body">
+                                    <h3 class="medicine-info__heading">
+                                        Key Considerations for Regulatory
+                                        Compliant.
+                                    </h3>
+                                    <p class="medicine-info__desc">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="#!" class="medicine-info__link"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </div>
+
+                            <div class="news__medicine-info">
+                                <a href="#!">
+                                    <img
+                                        src="./assets/img/barce.jpg"
+                                        alt="medicine"
+                                        class="medicine-info__image"
+                                    />
+                                </a>
+                                <div class="medicine-info__body">
+                                    <h3 class="medicine-info__heading">
+                                        What Is Population Health Management?
+                                    </h3>
+                                    <p class="medicine-info__desc">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="#!" class="medicine-info__link"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </section>
+
+            <!-- Appointment -->
+            <section class="appointment">
+                <div class="container">
+                    <section class="appointment__body">
+                        <h1 class="section-heading appointment__heading">
+                            Always welcoming new patients
+                        </h1>
+                        <p class="section-desc appointment__desc">
+                            Take control of your dental health and get the
+                            personalized care you deserve. Call (541) 772-8846
+                            to schedule
+                        </p>
+                        <a class="btn appointment__btn">Appointment</a>
+                    </section>
                 </div>
             </section>
         </main>
